add heartbeat
