# internal/controller/myservices/main.gen.go
@@ -309,6 +309,9 @@ func WithRequestEditorFn(fn RequestEditorFn) ClientOption {
 
 // The interface specification for the client above.
 type ClientInterface interface {
+	// GetHeartbeat request
+	GetHeartbeat(ctx context.Context, reqEditors ...RequestEditorFn) (*http.Response, error)
+
 	// PostRequestsWithBody request with any body
 	PostRequestsWithBody(ctx context.Context, contentType string, body io.Reader, reqEditors ...RequestEditorFn) (*http.Response, error)
 
@@ -329,6 +332,18 @@ type ClientInterface interface {
 	PatchTasksIdWithBody(ctx context.Context, id int, contentType string, body io.Reader, reqEditors ...RequestEditorFn) (*http.Response, error)
 
 	PatchTasksId(ctx context.Context, id int, body PatchTasksIdJSONRequestBody, reqEditors ...RequestEditorFn) (*http.Response, error)
+}
+
+func (c *Client) GetHeartbeat(ctx context.Context, reqEditors ...RequestEditorFn) (*http.Response, error) {
+	req, err := NewGetHeartbeatRequest(c.Server)
+	if err != nil {
+		return nil, err
+	}
+	req = req.WithContext(ctx)
+	if err := c.applyEditors(ctx, req, reqEditors); err != nil {
+		return nil, err
+	}
+	return c.Client.Do(req)
 }
 
 func (c *Client) PostRequestsWithBody(ctx context.Context, contentType string, body io.Reader, reqEditors ...RequestEditorFn) (*http.Response, error) {
@@ -425,6 +440,33 @@ func (c *Client) PatchTasksId(ctx context.Context, id int, body PatchTasksIdJSON
 		return nil, err
 	}
 	return c.Client.Do(req)
+}
+
+// NewGetHeartbeatRequest generates requests for GetHeartbeat
+func NewGetHeartbeatRequest(server string) (*http.Request, error) {
+	var err error
+
+	serverURL, err := url.Parse(server)
+	if err != nil {
+		return nil, err
+	}
+
+	operationPath := fmt.Sprintf("/heartbeat")
+	if operationPath[0] == '/' {
+		operationPath = "." + operationPath
+	}
+
+	queryURL, err := serverURL.Parse(operationPath)
+	if err != nil {
+		return nil, err
+	}
+
+	req, err := http.NewRequest(http.MethodGet, queryURL.String(), nil)
+	if err != nil {
+		return nil, err
+	}
+
+	return req, nil
 }
 
 // NewPostRequestsRequest calls the generic PostRequests builder with application/json body
@@ -672,6 +714,9 @@ func WithBaseURL(baseURL string) ClientOption {
 
 // ClientWithResponsesInterface is the interface specification for the client with responses above.
 type ClientWithResponsesInterface interface {
+	// GetHeartbeatWithResponse request
+	GetHeartbeatWithResponse(ctx context.Context, reqEditors ...RequestEditorFn) (*GetHeartbeatResponse, error)
+
 	// PostRequestsWithBodyWithResponse request with any body
 	PostRequestsWithBodyWithResponse(ctx context.Context, contentType string, body io.Reader, reqEditors ...RequestEditorFn) (*PostRequestsResponse, error)
 
@@ -692,6 +737,35 @@ type ClientWithResponsesInterface interface {
 	PatchTasksIdWithBodyWithResponse(ctx context.Context, id int, contentType string, body io.Reader, reqEditors ...RequestEditorFn) (*PatchTasksIdResponse, error)
 
 	PatchTasksIdWithResponse(ctx context.Context, id int, body PatchTasksIdJSONRequestBody, reqEditors ...RequestEditorFn) (*PatchTasksIdResponse, error)
+}
+
+type GetHeartbeatResponse struct {
+	Body         []byte
+	HTTPResponse *http.Response
+}
+
+// Status returns HTTPResponse.Status
+func (r GetHeartbeatResponse) Status() string {
+	if r.HTTPResponse != nil {
+		return r.HTTPResponse.Status
+	}
+	return http.StatusText(0)
+}
+
+// StatusCode returns HTTPResponse.StatusCode
+func (r GetHeartbeatResponse) StatusCode() int {
+	if r.HTTPResponse != nil {
+		return r.HTTPResponse.StatusCode
+	}
+	return 0
+}
+
+// ContentType is a convenience method to retrieve the Content-Type value from the HTTP response headers
+func (r GetHeartbeatResponse) ContentType() string {
+	if r.HTTPResponse != nil {
+		return r.HTTPResponse.Header.Get("Content-Type")
+	}
+	return ""
 }
 
 type PostRequestsResponse struct {
@@ -858,6 +932,15 @@ func (r PatchTasksIdResponse) ContentType() string {
 	return ""
 }
 
+// GetHeartbeatWithResponse request returning *GetHeartbeatResponse
+func (c *ClientWithResponses) GetHeartbeatWithResponse(ctx context.Context, reqEditors ...RequestEditorFn) (*GetHeartbeatResponse, error) {
+	rsp, err := c.GetHeartbeat(ctx, reqEditors...)
+	if err != nil {
+		return nil, err
+	}
+	return ParseGetHeartbeatResponse(rsp)
+}
+
 // PostRequestsWithBodyWithResponse request with arbitrary body returning *PostRequestsResponse
 func (c *ClientWithResponses) PostRequestsWithBodyWithResponse(ctx context.Context, contentType string, body io.Reader, reqEditors ...RequestEditorFn) (*PostRequestsResponse, error) {
 	rsp, err := c.PostRequestsWithBody(ctx, contentType, body, reqEditors...)
@@ -925,6 +1008,22 @@ func (c *ClientWithResponses) PatchTasksIdWithResponse(ctx context.Context, id i
 		return nil, err
 	}
 	return ParsePatchTasksIdResponse(rsp)
+}
+
+// ParseGetHeartbeatResponse parses an HTTP response from a GetHeartbeatWithResponse call
+func ParseGetHeartbeatResponse(rsp *http.Response) (*GetHeartbeatResponse, error) {
+	bodyBytes, err := io.ReadAll(rsp.Body)
+	defer func() { _ = rsp.Body.Close() }()
+	if err != nil {
+		return nil, err
+	}
+
+	response := &GetHeartbeatResponse{
+		Body:         bodyBytes,
+		HTTPResponse: rsp,
+	}
+
+	return response, nil
 }
 
 // ParsePostRequestsResponse parses an HTTP response from a PostRequestsWithResponse call
